--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="ok_button">OK</string>
     <string name="change">your change</string>
     <string name="error_selling">Can not sell this product</string>
+    <string name="title_activity_screen_slide">ScreenSlideActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
